# Practical-18

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: sonarcloud.yml
CPPON/: CMakeLists.txt  Config.cpp  CppOn.cpp  CppOn.hpp
CPPON/include/: Config.hpp
CPPON/src/LexicalAnalyzer/: CMakeLists.txt  Lexer.cpp  Token.cpp  Vocabulary.cpp
CPPON/src/LexicalAnalyzer/include/: ConfigLexer.hpp  ILexer.hpp  IToken.hpp  Lexer.hpp  Token.hpp  TypeToken.hpp  Vocabulary.hpp
CPPON/src/Parser/: CMakeLists.txt  Node.cpp  Parser.cpp  Structe.cpp  Variable.cpp  cppon.cpp
CPPON/src/Parser/include/: Node.hpp  Parser.hpp  Structe.hpp  Variable.hpp  cppon.hpp
CPPON/tests/LexerTest/: CMakeLists.txt  Config.hpp  ConfigTest.hpp  test.cpp
CPPON/tests/ParserTest/: CMakeLists.txt  test.cpp
include/Practical-18/: Config.hpp  ConfigConcepts.hpp  ILexer.hpp  IToken.hpp  Lexer.hpp  Token.hpp  TokenType.hpp  WorkFile.hpp
practichka_18/: CMakeLists.txt
practichka_18/include/: ExceotionError.hpp  WorkWithFile.hpp
practichka_18/src/: WorkWithFile.cpp  main.cpp
src/: Config.cpp  IToken.cpp  Lexer.cpp  Token.cpp  WorkFile.cpp  main.cpp
src/Lexer/: CMakeLists.txt  ConfigLexer.cpp  IToken.cpp  Lexer.cpp  Token.cpp
src/Lexer/LexerTest/: CMakeLists.txt  tests.cpp
src/Lexer/include/: ConfigLexer.hpp  IToken.hpp  Lexer.hpp  Token.hpp  TokenType.hpp
src/Parser/: CMakeLists.txt
